--- a/Fronte_End/pages/adminPages/Supplier.html
+++ b/Fronte_End/pages/adminPages/Supplier.html
@@ -267,16 +267,16 @@
 
 <!-- ======= Footer ======= -->
 <footer id="footer" class="footer">
-    <div class="copyright">
-        &copy; Copyright <strong><span>Hello Shoe pvt</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-        Designed by <a href="">Nethmi Thathsarani</a>
-    </div>
+<!--    <div class="copyright">-->
+<!--        &copy; Copyright <strong><span>Hello Shoe pvt</span></strong>. All Rights Reserved-->
+<!--    </div>-->
+<!--    <div class="credits">-->
+<!--        Designed by <a href="">Nethmi Thathsarani</a>-->
+<!--    </div>-->
 </footer><!-- End Footer -->
 
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
+<!--<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i-->
+<!--        class="bi bi-arrow-up-short"></i></a>-->
 
 <!-- Vendor JS Files -->
 <script src="../../assets/vendor/apexcharts/apexcharts.min.js"></script>
