--- a/Fronte_End/pages/userPages/Orders.html
+++ b/Fronte_End/pages/userPages/Orders.html
@@ -110,7 +110,7 @@
 
     <!-- Order Header Start -->
     <div class="container d-flex flex-grow-1 flex-column">
-        <h1>Sales Manage</h1>
+        <h3>Sales <span style="color: purple">Manage</span></h3>
         <!--        <div class="position-relative d-inline-block mt-3 mt-lg-4 mt-md-4">-->
         <!--            <h2 id="H1-2" style="font-family: 'Arial Rounded MT Bold',serif"><i-->
         <!--                    class="bi bi-cart"></i> Place Order-->
@@ -131,8 +131,8 @@
         <div class="row justify-content-around" style="height: min-content">
 
             <!-- Order Invoice Details Section Start -->
-            <div class="col-10 col-md-5 col-lg-4 p-3 mt-3 rounded-3 sectionBorder" style="background-color: #c8cfc8">
-                <h5 class="text-center p-2 text-light rounded-3" style="background: #378CE7">Sale Details</h5>
+            <div class="col-10 col-md-5 col-lg-4 p-3 mt-3 rounded-3 sectionBorder" style="background-color: #e6e6e6">
+                <h5 class="text-center p-2 text-light rounded-3" style="background: #38704f">Sale Details</h5>
                 <div class="row mt-1">
                     <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="oid">SALE ID </label>
@@ -169,8 +169,8 @@
             <!-- Order Invoice Details Section End -->
 
             <!-- Order Item Details Section Start -->
-            <div class="col-10 col-md-5 col-lg-4 p-3 mt-3 rounded-3 sectionBorder" style="background-color: #c8cfc8">
-                <h5 class="text-center p-2 text-light rounded-3" style="background: #378CE7">Item Details</h5>
+            <div class="col-10 col-md-5 col-lg-4 p-3 mt-3 rounded-3 sectionBorder" style="background-color: #e6e6e6">
+                <h5 class="text-center p-2 text-light rounded-3" style="background: #38704f">Item Details</h5>
                 <div class="row mt-1">
                     <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="Item_Code">Item Code :</label>
@@ -200,7 +200,7 @@
                         <strong class="control-error" id="lblCheckQty"></strong>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 mt-4 ">
-                        <button class="btn btn-primary rounded-2" id="btnAddToCart" type="button">Add To Cart</button>
+                        <button class="btn btn-success rounded-2" id="btnAddToCart" type="button">Add To Cart</button>
                     </div>
                 </div>
 
@@ -220,8 +220,8 @@
             <!-- Order Item Details Section End -->
 
             <!-- Order Details Section Start -->
-            <div class="col-10 col-md-5 col-lg-3 p-3 mt-3 rounded-3 sectionBorder" style="background-color: #dce3dc">
-                <h5 class="text-center  p-2 text-light rounded-3" style="background: #378CE7">Payment Details</h5>
+            <div class="col-10 col-md-5 col-lg-3 p-3 mt-3 rounded-3 sectionBorder" style="background-color: #e6e6e6">
+                <h5 class="text-center  p-2 text-light rounded-3" style="background: #385e70">Payment Details</h5>
                 <div class="row mt-1">
                     <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="txtTotal">Total :</label>
@@ -280,11 +280,11 @@
 
                 <div class="row mt-1">
                     <div class="d-grid col-12 col-md-5 mt-4">
-                        <button class="btn btn-success rounded-2 bold sectionBorder" id="btnPurchase" type="button">Purchase
+                        <button class="btn btn-primary rounded-2 bold sectionBorder" id="btnPurchase" type="button">Purchase
                         </button>
                     </div>
 
-                    <div class="d-grid col-12 col-md-2 mt-4">
+                    <div class="d-grid col-12 col-md-5 mt-4">
                         <button class="btn btn-primary rounded-2 bold sectionBorder" id="btnCard" type="button">Card
                         </button>
                     </div>
