--- a/Fronte_End/pages/adminPages/Inventory.html
+++ b/Fronte_End/pages/adminPages/Inventory.html
@@ -387,9 +387,8 @@
                                 </div>
                                 <div class="mb-sm-0">
                                     <label class="form-label" for="inv_Supplier_Code">Supplier Code</label>
-                                    <select class="form-control" id="inv_Supplier_Code" name="supplier">
-
-                                    </select>
+                                    <input type="text" name="supplier" class="form-control"  id="inv_Supplier_Code"
+                                           placeholder="Supplier name">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0">
