--- a/Fronte_End/pages/adminPages/Customer.html
+++ b/Fronte_End/pages/adminPages/Customer.html
@@ -28,6 +28,7 @@
   <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -351,7 +352,7 @@
 
 <!--<script src="../../controller/Reg_UserController.js"></script>-->
 <!--<script src="../../controller/DashBoardController.js"></script>-->
-
+<script src="../../controller/loginController.js"></script>
 <script src="../../controller/CustomerController.js"></script>
 
 <!-- Util JS File -->
