--- a/Fronte_End/pages/adminPages/Inventory.html
+++ b/Fronte_End/pages/adminPages/Inventory.html
@@ -27,6 +27,7 @@
     <!-- Template Dashboard CSS File -->
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -507,7 +508,7 @@
 
 <!-- Controller JS File -->
 <script src="../../controller/ItemController.js"></script>
-
+<script src="../../controller/loginController.js"></script>
 
 
 <!-- Util JS File -->
