--- a/Fronte_End/pages/adminPages/Supplier.html
+++ b/Fronte_End/pages/adminPages/Supplier.html
@@ -28,6 +28,7 @@
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -292,7 +293,7 @@
 <!--<script src="../../controller/DashBoardController.js"></script>-->
 
 <script src="../../controller/SupplierController.js"></script>
-
+<script src="../../controller/loginController.js"></script>
 
 <!-- Util JS File -->
 <script src="../../util/alert.js" rel="script"></script>
