--- a/Fronte_End/pages/userPages/OrderDetails.html
+++ b/Fronte_End/pages/userPages/OrderDetails.html
@@ -27,6 +27,7 @@
     <!-- Template Dashboard CSS File -->
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
+
 </head>
 <body>
 
@@ -180,7 +181,7 @@
 <!-- Controller JS File -->
 
 <script src="../../controller/SaleViewController.js"></script>
-
+<script src="../../controller/loginController.js"></script>
 
 <!-- Util JS File -->
 <script src="../../util/alert.js" rel="script"></script>
