--- a/Fronte_End/pages/userPages/Orders.html
+++ b/Fronte_End/pages/userPages/Orders.html
@@ -146,9 +146,7 @@
                 <div class="row mt-1">
                     <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="Customer_Id">CUSTOMER ID :</label>
-                        <select aria-label="Default select example" class="form-select border-dark" id="Customer_Id"
-                                value="Customer ID">
-                        </select>
+                        <input class="form-control border-dark"  id="Customer_Id" type="text">
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="cusName">NAME :</label>
@@ -174,9 +172,7 @@
                 <div class="row mt-1">
                     <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="Item_Code">Item Code :</label>
-                        <select aria-label="Default select example" class="form-select border-dark" id="Item_Code"
-                                value="Item Code">
-                        </select>
+                        <input class="form-control border-dark"  id="Item_Code" type="text">
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="itemName">Item Name :</label>
@@ -358,7 +354,7 @@
 
 <!-- Controller JS File -->
 <script src="../../controller/OrderCotroller.js"></script>
-
+<script src="../../controller/loginController.js"></script>
 
 
 <!-- Util JS File -->
