--- a/Fronte_End/pages/userPages/SupplierDetails.html
+++ b/Fronte_End/pages/userPages/SupplierDetails.html
@@ -28,6 +28,7 @@
   <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -326,7 +327,7 @@
 
 <!-- Controller JS File -->
 <script src="../../controller/SupplierDetailsController.js"></script>
-
+<script src="../../controller/loginController.js"></script>
 
 <!-- Util JS File -->
 <script src="../../util/alert.js" rel="script"></script>
