--- a/Fronte_End/pages/adminPages/Employee.html
+++ b/Fronte_End/pages/adminPages/Employee.html
@@ -27,6 +27,7 @@
     <!-- Template Dashboard CSS File -->
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -376,7 +377,7 @@
 
 <!-- Controller JS File -->
 <script src="../../controller/EmployeeController.js"></script>
-
+<script src="../../controller/loginController.js"></script>
 
 <!-- Util JS File -->
 <script src="../../util/alert.js" rel="script"></script>
