--- a/Fronte_End/pages/login.html
+++ b/Fronte_End/pages/login.html
@@ -28,33 +28,34 @@
   <link rel="stylesheet" href="../assets/vendor/styleslog/sb-admin-2.min.css">
   <link rel="stylesheet" href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.css">
 
+
 </head>
 <body>
 
-<div class="container">
+<!--<div class="container">
 
-  <!-- Outer Row -->
+  &lt;!&ndash; Outer Row &ndash;&gt;
   <div class="row justify-content-center mt-5">
 
     <div class="col-xl-10 col-lg-12 col-md-9">
 
       <div class="card o-hidden border-0 shadow-lg my-6 sectionBorder">
         <div class="card-body p-0">
-          <!-- Nested Row within Card Body -->
+          &lt;!&ndash; Nested Row within Card Body &ndash;&gt;
           <div class="row">
-            <div class="col-lg-6 d-none d-lg-block" style="background: url(../assets/img/my.jpg);background-size: cover"></div>
+            <div class="col-lg-6 d-none d-lg-block" style="background: url(../assets/img/gifshoe.gif);background-size: cover"></div>
             <div class="col-lg-6">
               <div class="p-5">
                 <div class="text-center">
                   <h1 class="h4 text-gray-900 mb-4">Welcome!</h1>
                 </div>
                 <form class="user m-2 p-3" id="loginForm">
-                  <div class="form-group">
-                    <select class="form-control" id="role_Type" name="role_Type" style="border-radius: 30px;height: 3.5em">
-                      <option value="ADMIN">ADMIN</option>
-                      <option value="DRIVER">USER</option>
-                    </select>
-                  </div>
+&lt;!&ndash;                  <div class="form-group">&ndash;&gt;
+&lt;!&ndash;                    <select class="form-control" id="role_Type" name="role_Type" style="border-radius: 30px;height: 3.5em">&ndash;&gt;
+&lt;!&ndash;                      <option value="ADMIN">ADMIN</option>&ndash;&gt;
+&lt;!&ndash;                      <option value="DRIVER">USER</option>&ndash;&gt;
+&lt;!&ndash;                    </select>&ndash;&gt;
+&lt;!&ndash;                  </div>&ndash;&gt;
                   <div class="form-group mt-4">
                     <input type="text" class="form-control form-control-user"
                            id="user_Name" aria-describedby="emailHelp"
@@ -93,8 +94,77 @@
 
   </div>
 
+</div>-->
+
+<div class="container">
+
+    <!-- Outer Row -->
+    <div class="row justify-content-center mt-5">
+
+        <div class="col-xl-10 col-lg-12 col-md-9">
+
+            <div class="card o-hidden border-0 shadow-lg my-6 sectionBorder">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <div class="col-lg-6 d-none d-lg-block" style="background: url(../assets/img/my.jpg);background-size: cover"></div>
+                        <div class="col-lg-6">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">Welcome</h1>
+                                </div>
+                                <form class="user m-2 p-3" id="loginForm">
+                                    <div class="form-group">
+
+                                    </div>
+                                    <div class="form-group mt-4">
+                                        <input type="text" class="form-control form-control-user"
+                                               id="user_Name" aria-describedby="emailHelp"
+                                               placeholder="Enter User Name...">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control form-control-user"
+                                               id="password" placeholder="Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="custom-control custom-checkbox small">
+                                            <input type="checkbox" class="custom-control-input" id="customCheck">
+                                            <label class="custom-control-label" for="customCheck">Remember
+                                                Me</label>
+                                        </div>
+                                    </div>
+                                    <button id="btnLogin" type="button" class="btn btn-dark btn-user btn-block">
+                                        Login
+                                    </button>
+                                    <a class="nav-link " href="SingUp.html">
+                                        <button type="button" class="btn btn-dark btn-user btn-block">
+                                            SignUp
+                                        </button>
+                                    </a>
+                                </form>
+                                <hr>
+                                <div class="text-center">
+                                    <a class="small" href="">Forgot Password?</a>
+                                </div>
+                                <!--                <div class="text-center">-->
+                                <!--                  <a class="small" href="../index.html">Create an Account!</a>-->
+                                <!--                </div>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
 </div>
 
-
+<script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
+<script src="../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
+<script src="../assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
+<script rel="script" src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
+<script src="../controller/loginController.js"></script>
 </body>
 </html>
