--- a/Fronte_End/pages/adminPages/Inventory.html
+++ b/Fronte_End/pages/adminPages/Inventory.html
@@ -436,13 +436,17 @@
                             </section>
 
                             <section id="sec3" class="col-md-4 mt-3">
+
+                            </section>
+                            <section>
                                 <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
                                     <button class="btn btn-success me-md-1" id="btnAddInventory" type="button">Add</button>
                                     <button class="btn btn-warning me-md-1" id="btnUpdateInventory" type="button">Update</button>
                                     <button type="button" class="btn btn-danger me-md-1" id="btnDeleteInventory">Delete</button>
+                                    <button type="button" class="btn btn-primary me-md-1" id="btnClearInventory">Clear</button>
+
                                 </div>
                             </section>
-
                         </form>
                     </div>
                 </div>
