--- a/Fronte_End/pages/adminPages/Supplier.html
+++ b/Fronte_End/pages/adminPages/Supplier.html
@@ -219,13 +219,20 @@
                                     <span class="control-error"></span>
                                 </div>
 
+
                             </section>
 
-                            <section id="Supsec3" class="col-md-4 mt-3">
+<!--                            <section id="Supsec3" class="col-md-4 mt-3">-->
+
+<!--                            </section>-->
+
+                            <section>
+
                                 <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
                                     <button class="btn btn-success me-md-1" id="btnAddSupplier" type="button">Add</button>
                                     <button class="btn btn-warning me-md-1" id="btnUpdateSupplier" type="button">Update</button>
                                     <button type="button" class="btn btn-danger me-md-1" id="btnDeleteSupplier">Delete</button>
+                                    <button type="button" class="btn btn-primary me-md-1" id="btnClearSupplier">Clear</button>
                                 </div>
                             </section>
 
