--- a/Fronte_End/pages/login.html
+++ b/Fronte_End/pages/login.html
@@ -111,7 +111,7 @@
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <h1 class="h4 text-gray-900 mb-4">Welcome</h1>
+                                    <h1 class="h4 text-gray-900 mb-4" style="font-size: 50px;">Welcome</h1>
                                 </div>
                                 <form class="user m-2 p-3" id="loginForm">
                                     <div class="form-group">
@@ -133,11 +133,11 @@
                                                 Me</label>
                                         </div>
                                     </div>
-                                    <button id="btnLogin" type="button" class="btn btn-dark btn-user btn-block">
+                                    <button id="btnLogin" type="button" class="btn btn-success btn-user btn-block">
                                         Login
                                     </button>
                                     <a class="nav-link " href="SingUp.html">
-                                        <button type="button" class="btn btn-dark btn-user btn-block">
+                                        <button type="button" class="btn btn-success btn-user btn-block">
                                             SignUp
                                         </button>
                                     </a>
