--- a/Fronte_End/pages/userPages/EmployeeDetails.html
+++ b/Fronte_End/pages/userPages/EmployeeDetails.html
@@ -342,6 +342,7 @@
 
 <!-- Controller JS File -->
 <script src="../../controller/EmployeeDetailController.js"></script>
+<script src="../../controller/loginController.js"></script>
 
 
 <!-- Util JS File -->
