--- a/Fronte_End/pages/adminPages/Customer.html
+++ b/Fronte_End/pages/adminPages/Customer.html
@@ -280,13 +280,18 @@
 <!--                         placeholder="Enter Password">-->
 <!--                  <span class="control-error"></span>-->
 <!--                </div>-->
+
+              </section>
+
+              <section>
                 <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
                   <button class="btn btn-success me-md-1" id="btnAddCustomer" type="button">Add</button>
                   <button class="btn btn-warning me-md-1" id="btnUpdateCustomer" type="button">Update</button>
                   <button type="button" class="btn btn-danger me-md-1" id="btnDeleteCustomer">Delete</button>
+                  <button type="button" class="btn btn-primary me-md-1" id="btnClearCustomer">Clear</button>
+
                 </div>
               </section>
-
             </form>
           </div>
         </div>
