--- a/Fronte_End/pages/adminPages/Employee.html
+++ b/Fronte_End/pages/adminPages/Employee.html
@@ -298,10 +298,15 @@
                                 <!--                         placeholder="Enter Password">-->
                                 <!--                  <span class="control-error"></span>-->
                                 <!--                </div>-->
+
+                            </section>
+
+                            <section>
                                 <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
                                     <button class="btn btn-success me-md-1" id="btnAddEmployee" type="button">Add</button>
                                     <button class="btn btn-warning me-md-1" id="btnUpdateEmployee" type="button">Update</button>
                                     <button type="button" class="btn btn-danger me-md-1" id="btnDeleteEmployee">Delete</button>
+                                    <button type="button" class="btn btn-primary me-md-1" id="btnClearEmplyee">Clear</button>
                                 </div>
                             </section>
 
