--- a/Fronte_End/pages/UserDashBoard.html
+++ b/Fronte_End/pages/UserDashBoard.html
@@ -257,81 +257,50 @@
   <ul class="sidebar-nav" id="sidebar-nav">
 
     <li class="nav-item">
-      <a class="nav-link " href="UserDashBoard.html">
-        <i class="bi bi-grid"></i>
+      <a class="nav-link " href="../UserDashBoard.html">
+        <i class="bi bi-kanban"></i>
         <span>Dashboard</span>
       </a>
     </li><!-- End Dashboard Nav -->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
-      </a>
-      <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-        <li>
-          <a href="userPages/Orders.html">
-            <i class="bi bi-circle"></i><span>Orders</span>
-          </a>
-        </li>
-
-          <li>
-              <a href="userPages/OrderDetails.html">
-                  <i class="bi bi-circle"></i><span>Order Details</span>
-              </a>
-          </li>
-<!--        <li>-->
-<!--          <a href="adminPages/Employee.html">-->
-<!--            <i class="bi bi-circle"></i><span>Employee</span>-->
-<!--          </a>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <a href="adminPages/Supplier.html">-->
-<!--            <i class="bi bi-circle"></i><span>Supplier</span>-->
-<!--          </a>-->
-<!--        </li>-->
-      </ul>
-    </li>
-    <!-- End Forms Nav -->
+      <!--<a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
+      </a>-->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-layout-text-window-reverse"></i><span>Details</span><i
-              class="bi bi-chevron-down ms-auto"></i>
+      <a class="nav-link collapsed" href="./userPages/Orders.html">
+        <i class="bi bi-kanban"></i>
+        <span>Sales</span>
       </a>
-      <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-        <li>
-          <a href="userPages/SupplierDetails.html">
-            <i class="bi bi-circle"></i><span>Supplier Details</span>
-          </a>
-        </li>
-        <li>
-          <a href="userPages/EmployeeDetails.html">
-            <i class="bi bi-circle"></i><span>Employee Details</span>
-          </a>
-        </li>
-      </ul>
-    </li><!-- End View Nav -->
-
-<!--    <li class="nav-item">-->
-<!--      <a class="nav-link collapsed" href="adminPages/CusomerRequest.html" id="myDetailsSection">-->
-<!--        <i class="bi bi-kanban"></i>-->
-<!--        <span>Rent Request</span>-->
-<!--      </a>-->
-<!--    </li>-->
-
-<!--    <li class="nav-item">-->
-<!--      <a class="nav-link collapsed" href="adminPages/IncomeDetails.html" id="incomeDetails">-->
-<!--        <i class="bi bi-kanban"></i>-->
-<!--        <span>Income Details</span>-->
-<!--      </a>-->
-<!--    </li>-->
+    </li>
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="./userPages/OrderDetails.html">
+        <i class="bi bi-kanban"></i>
+        <span>Sale Details</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="./userPages/EmployeeDetails.html">
+        <i class="bi bi-kanban"></i>
+        <span>Employee Details</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="./userPages/SupplierDetails.html">
+        <i class="bi bi-kanban"></i>
+        <span>Supplier Details</span>
+      </a>
+    </li>
 
     <li class="nav-item">
       <a class="nav-link collapsed" href="login.html">
-        <i class="bi bi-box-arrow-in-right"></i>
+        <i class="bi bi-kanban"></i>
         <span>LogOut</span>
       </a>
     </li>
+
+
     <!-- End Login Page Nav -->
 
   </ul>
@@ -414,95 +383,10 @@
           <!-- End Car Card -->
         </div>
         <div class="img">
-          <img class="testimg" src="../assets/img/AdminDashBoard.jpg" alt="">
+<!--          <img class="testimg" src="../assets/img/AdminDashBoard.jpg" alt="">-->
         </div>
       </div>
-      <!-- End Left side columns -->
 
-      <!-- Right side columns -->
-      <!--      <div class="col-lg-4">-->
-
-      <!--        &lt;!&ndash; Recent Activity &ndash;&gt;-->
-      <!--&lt;!&ndash;        <div class="card">&ndash;&gt;-->
-      <!--&lt;!&ndash;          <div class="filter">&ndash;&gt;-->
-      <!--&lt;!&ndash;            <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>&ndash;&gt;-->
-      <!--&lt;!&ndash;            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">&ndash;&gt;-->
-      <!--&lt;!&ndash;              <li class="dropdown-header text-start">&ndash;&gt;-->
-      <!--&lt;!&ndash;                <h6>Filter</h6>&ndash;&gt;-->
-      <!--&lt;!&ndash;              </li>&ndash;&gt;-->
-
-      <!--&lt;!&ndash;              <li><a class="dropdown-item" href="#">Today</a></li>&ndash;&gt;-->
-      <!--&lt;!&ndash;              <li><a class="dropdown-item" href="#">This Month</a></li>&ndash;&gt;-->
-      <!--&lt;!&ndash;              <li><a class="dropdown-item" href="#">This Year</a></li>&ndash;&gt;-->
-      <!--&lt;!&ndash;            </ul>&ndash;&gt;-->
-      <!--&lt;!&ndash;          </div>&ndash;&gt;-->
-
-      <!--&lt;!&ndash;          <div class="card-body">&ndash;&gt;-->
-      <!--&lt;!&ndash;            <h5 class="card-title">Recent Activity <span>| Today</span></h5>&ndash;&gt;-->
-
-      <!--&lt;!&ndash;            <div class="activity">&ndash;&gt;-->
-
-      <!--&lt;!&ndash;              <div class="activity-item d-flex">&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activite-label">40 min</div>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activity-content">&ndash;&gt;-->
-      <!--&lt;!&ndash;                  Add New Car <a href="#" class="fw-bold text-dark">Brand BMW</a>&ndash;&gt;-->
-      <!--&lt;!&ndash;                </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              &lt;!&ndash; End activity item&ndash;&gt;&ndash;&gt;-->
-
-      <!--&lt;!&ndash;              <div class="activity-item d-flex">&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activite-label">56 min</div>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activity-content">&ndash;&gt;-->
-      <!--&lt;!&ndash;                  C00-002 Customer Rent CAR-003&ndash;&gt;-->
-      <!--&lt;!&ndash;                </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              &lt;!&ndash; End activity item&ndash;&gt;&ndash;&gt;-->
-
-      <!--&lt;!&ndash;              <div class="activity-item d-flex">&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activite-label">2 hrs</div>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activity-content">&ndash;&gt;-->
-      <!--&lt;!&ndash;                  C00-010 Customer Rent CAR-007&ndash;&gt;-->
-      <!--&lt;!&ndash;                </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              &lt;!&ndash; End activity item&ndash;&gt;&ndash;&gt;-->
-
-      <!--&lt;!&ndash;              <div class="activity-item d-flex">&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activite-label">40 min</div>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activity-content">&ndash;&gt;-->
-      <!--&lt;!&ndash;                  Add New Car <a href="#" class="fw-bold text-dark">Brand Banz</a>&ndash;&gt;-->
-      <!--&lt;!&ndash;                </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              &lt;!&ndash; End activity item&ndash;&gt;&ndash;&gt;-->
-
-      <!--&lt;!&ndash;              <div class="activity-item d-flex">&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activite-label">2 days</div>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activity-content">&ndash;&gt;-->
-      <!--&lt;!&ndash;                  C00-012 Customer Request a Rent CRI-007 Car.&ndash;&gt;-->
-      <!--&lt;!&ndash;                </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              &lt;!&ndash; End activity item&ndash;&gt;&ndash;&gt;-->
-
-      <!--&lt;!&ndash;              <div class="activity-item d-flex">&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activite-label">2 Days</div>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>&ndash;&gt;-->
-      <!--&lt;!&ndash;                <div class="activity-content">&ndash;&gt;-->
-      <!--&lt;!&ndash;                  Add New Car <a href="#" class="fw-bold text-dark">Brand Banz</a>&ndash;&gt;-->
-      <!--&lt;!&ndash;                </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;              &lt;!&ndash; End activity item&ndash;&gt;&ndash;&gt;-->
-      <!--&lt;!&ndash;            </div>&ndash;&gt;-->
-
-      <!--&lt;!&ndash;          </div>&ndash;&gt;-->
-      <!--&lt;!&ndash;        </div>&ndash;&gt;-->
-      <!--        &lt;!&ndash; End Recent Activity &ndash;&gt;-->
-
-      <!--      </div>-->
-      <!-- End Right side columns -->
     </div>
   </section>
 </main>
