--- a/Fronte_End/pages/adminPages/Customer.html
+++ b/Fronte_End/pages/adminPages/Customer.html
@@ -88,11 +88,17 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link collapsed" href="AdminSetting.html" id="myDetailsSection">
+      <a class="nav-link collapsed" href="../adminPages/AdminSetting.html">
         <i class="bi bi-kanban"></i>
-        <span>Admin Setting</span>
+        <span>User Setting</span>
       </a>
     </li>
+<!--    <li class="nav-item">-->
+<!--      <a class="nav-link collapsed" href="../userPages/AdminSetting.html" id="myDetailsSection">-->
+<!--        <i class="bi bi-kanban"></i>-->
+<!--        <span>Admin Setting</span>-->
+<!--      </a>-->
+<!--    </li>-->
 
     <!--        <li class="nav-item">-->
     <!--            <a class="nav-link collapsed" href="IncomeDetails.html" id="incomeDetails">-->
