--- a/Fronte_End/pages/userPages/SupplierDetails.html
+++ b/Fronte_End/pages/userPages/SupplierDetails.html
@@ -93,6 +93,13 @@
         <span>LogOut</span>
       </a>
     </li>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="../adminPages/AdminSetting.html">
+        <i class="bi bi-kanban"></i>
+        <span>User Setting</span>
+      </a>
+    </li>
     <!-- End Login Page Nav -->
 
   </ul>
