--- a/Fronte_End/pages/adminDashBoard.html
+++ b/Fronte_End/pages/adminDashBoard.html
@@ -86,12 +86,19 @@
         <span>Inventory</span>
       </a>
     </li>
+
     <li class="nav-item">
-      <a class="nav-link collapsed" href="AdminSetting.html" id="myDetailsSection">
+      <a class="nav-link collapsed" href="adminPages/AdminSetting.html">
         <i class="bi bi-kanban"></i>
-        <span>Admin Setting</span>
+        <span>User Setting</span>
       </a>
     </li>
+<!--    <li class="nav-item">-->
+<!--      <a class="nav-link collapsed" href="AdminSetting.html" id="myDetailsSection">-->
+<!--        <i class="bi bi-kanban"></i>-->
+<!--        <span>Admin Setting</span>-->
+<!--      </a>-->
+<!--    </li>-->
 
     <!--        <li class="nav-item">-->
     <!--            <a class="nav-link collapsed" href="IncomeDetails.html" id="incomeDetails">-->
