--- a/Fronte_End/pages/UserDashBoard.html
+++ b/Fronte_End/pages/UserDashBoard.html
@@ -34,219 +34,12 @@
 
   <div class="d-flex align-items-center justify-content-between">
     <a href="UserDashBoard.html" class="logo d-flex align-items-center">
-      <span class="d-none d-lg-block">Hello <span>Shoe.</span></span>
+      <span class="d-none d-lg-block">Hello Shoe PVT</span>
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div><!-- End Logo -->
 
-  <nav class="header-nav ms-auto">
-    <ul class="d-flex align-items-center">
-
-      <li class="nav-item d-block d-lg-none">
-        <a class="nav-link nav-icon search-bar-toggle " href="#">
-          <i class="bi bi-search"></i>
-        </a>
-      </li><!-- End Search Icon-->
-
-      <li class="nav-item dropdown">
-
-        <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-          <i class="bi bi-bell"></i>
-          <span class="badge bg-primary badge-number">4</span>
-        </a><!-- End Notification Icon -->
-
-        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-          <li class="dropdown-header">
-            You have 4 new notifications
-            <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="notification-item">
-            <i class="bi bi-exclamation-circle text-warning"></i>
-            <div>
-              <h4>Lorem Ipsum</h4>
-              <p>Quae dolorem earum veritatis oditseno</p>
-              <p>30 min. ago</p>
-            </div>
-          </li>
-
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="notification-item">
-            <i class="bi bi-x-circle text-danger"></i>
-            <div>
-              <h4>Atque rerum nesciunt</h4>
-              <p>Quae dolorem earum veritatis oditseno</p>
-              <p>1 hr. ago</p>
-            </div>
-          </li>
-
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="notification-item">
-            <i class="bi bi-check-circle text-success"></i>
-            <div>
-              <h4>Sit rerum fuga</h4>
-              <p>Quae dolorem earum veritatis oditseno</p>
-              <p>2 hrs. ago</p>
-            </div>
-          </li>
-
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="notification-item">
-            <i class="bi bi-info-circle text-primary"></i>
-            <div>
-              <h4>Dicta reprehenderit</h4>
-              <p>Quae dolorem earum veritatis oditseno</p>
-              <p>4 hrs. ago</p>
-            </div>
-          </li>
-
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-          <li class="dropdown-footer">
-            <a href="#">Show all notifications</a>
-          </li>
-
-        </ul><!-- End Notification Dropdown Items -->
-
-      </li><!-- End Notification Nav -->
-
-      <li class="nav-item dropdown">
-
-        <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-          <i class="bi bi-chat-left-text"></i>
-          <span class="badge bg-success badge-number">3</span>
-        </a><!-- End Messages Icon -->
-
-        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
-          <li class="dropdown-header">
-            You have 3 new messages
-            <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="message-item">
-            <a href="#">
-              <img src="../assets/img/massage/messages-1.jpg" alt="" class="rounded-circle">
-              <div>
-                <h4>Maria Hudson</h4>
-                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                <p>4 hrs. ago</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="message-item">
-            <a href="#">
-              <img src="../assets/img/massage/messages-2.jpg" alt="" class="rounded-circle">
-              <div>
-                <h4>Anna Nelson</h4>
-                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                <p>6 hrs. ago</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="message-item">
-            <a href="#">
-              <img src="../assets/img/massage/messages-3.jpg" alt="" class="rounded-circle">
-              <div>
-                <h4>David Muldon</h4>
-                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                <p>8 hrs. ago</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li class="dropdown-footer">
-            <a href="#">Show all messages</a>
-          </li>
-
-        </ul><!-- End Messages Dropdown Items -->
-
-      </li><!-- End Messages Nav -->
-
-      <li class="nav-item dropdown pe-3">
-
-        <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-          <img src="../assets/img/massage/profile-img.jpg" alt="Profile" class="rounded-circle">
-          <span class="d-none d-md-block dropdown-toggle ps-2">K.L Samson</span>
-        </a><!-- End Profile Iamge Icon -->
-
-        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-          <li class="dropdown-header">
-            <h6>K.L Samson</h6>
-            <span>Manager</span>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li>
-            <a class="dropdown-item d-flex align-items-center" href="">
-              <i class="bi bi-person"></i>
-              <span>My Profile</span>
-            </a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li>
-            <a class="dropdown-item d-flex align-items-center" href="">
-              <i class="bi bi-gear"></i>
-              <span>Account Settings</span>
-            </a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li>
-            <a class="dropdown-item d-flex align-items-center" href="">
-              <i class="bi bi-question-circle"></i>
-              <span>Need Help?</span>
-            </a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li>
-            <a class="dropdown-item d-flex align-items-center" href="login.html">
-              <i class="bi bi-box-arrow-right"></i>
-              <span>Sign Out</span>
-            </a>
-          </li>
-
-        </ul><!-- End Profile Dropdown Items -->
-      </li><!-- End Profile Nav -->
-
-    </ul>
-  </nav><!-- End Icons Navigation -->
+ <!-- End Icons Navigation -->
 
 </header>
 <!-- End Header -->
@@ -312,31 +105,27 @@
 <main id="main" class="main">
 
   <div class="pageTitle" id="pageOne">
-    <h1>User Dashboard</h1>
-    <nav>
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="UserDashBoard.html">Home</a></li>
-        <li class="breadcrumb-item active">Dashboard</li>
-      </ol>
-    </nav>
+    <h1 style="font-size: 40px; color: black">User Panel</h1>
+
   </div>
   <!-- End Page Title -->
   <section class="section dashboard">
     <div class="row">
 
-      <!-- Left side columns -->
+
       <div class="col-lg-12">
         <div class="row">
 
           <!-- Car Card -->
           <div class="col-xxl-4 col-md-6">
-            <div class="card info-card car-card">
-              <div class="card-body">
-                <h5 class="card-title">Today <span>| Orders</span></h5>
+            <div class="card info-card car-card" style="background-color: #e6e6e6">
+              <div class="card-body" style="background-color: #e6e6e6">
+                <h5 class="card-title" style="color: black">Total Sales</h5>
                 <div class="d-flex align-items-center">
-                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                    <i class="bi bi-car-front-fill"></i>
-                  </div>
+                  <img src="../assets/img/money-bag.gif" height="70px" width="70px">
+                  <!--                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">-->
+                  <!--                   <i class="fa-solid fa-truck"></i>-->
+                  <!--                  </div>-->
                   <div class="ps-3">
                     <h6 id="carCount">0</h6>
                   </div>
@@ -344,17 +133,18 @@
               </div>
             </div>
           </div>
-          <!-- End Car Card -->
 
-          <!-- Available Car Card -->
+
+
           <div class="col-xxl-4 col-md-6">
-            <div class="card info-card car-card">
-              <div class="card-body">
-                <h5 class="card-title">Today <span>| Supplier</span></h5>
+            <div class="card info-card car-card" style="background-color: #e6e6e6">
+              <div class="card-body" style="background-color: #e6e6e6">
+                <h5 class="card-title" style="color: black" >Total Profit</h5>
                 <div class="d-flex align-items-center">
-                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                    <i class="bi bi-car-front-fill"></i>
-                  </div>
+                  <img src="../assets/img/checklist.gif" height="70px" width="70px">
+                  <!--                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">-->
+                  <!--&lt;!&ndash;                    <i class="bi bi-car-front-fill"></i>&ndash;&gt;-->
+                  <!--                  </div>-->
                   <div class="ps-3">
                     <h6 id="availableCarCount">0</h6>
                   </div>
@@ -362,29 +152,16 @@
               </div>
             </div>
           </div>
-          <!-- End Car Card -->
 
-          <!-- Reserved Car Card -->
-          <div class="col-xxl-4 col-md-6">
-            <div class="card info-card car-card">
-              <div class="card-body">
-                <h5 class="card-title">All<span> | Employee</span></h5>
-                <div class="d-flex align-items-center">
-                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                    <i class="bi bi-car-front-fill"></i>
-                  </div>
-                  <div class="ps-3">
-                    <h6 id="reservedCarCount">0</h6>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+
+
+
           <!-- End Car Card -->
         </div>
-        <div class="img">
-<!--          <img class="testimg" src="../assets/img/AdminDashBoard.jpg" alt="">-->
-        </div>
+        <img id="img" src="../assets/img/yello-shoe-removebg-preview.png" width="300px">
+
+
+
       </div>
 
     </div>
@@ -393,14 +170,7 @@
 <!-- End #main -->
 
 <!-- ======= Footer ======= -->
-<footer id="footer" class="footer">
-  <div class="copyright">
-    &copy; Copyright <strong><span>Hello Shoe PVT</span></strong>. All Rights Reserved
-  </div>
-  <div class="credits">
-    Designed by <a href="">Nethmi Thathsarani</a>
-  </div>
-</footer><!-- End Footer -->
+<!-- End Footer -->
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
